force-app/main/default/objects/Return__c/Return__c.object-meta.xml
<CustomObject>
    <label>Return</label>
    <nameField>
        <label>Return Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Returns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>