force-app/main/default/objects/Return__c/fields/Acknowledgment_No__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_No__c</fullName>
    <label>Acknowledgment No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>