force-app/main/default/objects/Return__c/fields/Credit_Note_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Note Cancelled</label>
    <type>Checkbox</type>
</CustomField>