force-app/main/default/objects/Return__c/fields/Credit_Note_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Status_c__c</fullName>
    <label>Credit_Note_Status__c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generated</fullName>
                <default>true</default>
                <label>Generated</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>