force-app/main/default/objects/Return__c/fields/Credit_value__c.field-meta.xml
<CustomField>
    <fullName>Credit_value__c</fullName>
    <label>Credit value</label>
    <summarizedField>Credit_Amount__c.Amount__c</summarizedField>
    <summaryForeignKey>Credit_Amount__c.Return__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>