force-app/main/default/objects/Return__c/fields/Debit_Note_Number__c.field-meta.xml
<CustomField>
    <fullName>Debit_Note_Number__c</fullName>
    <label>Debit Note Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>