force-app/main/default/objects/Return__c/fields/Dept_Head__c.field-meta.xml
<CustomField>
    <fullName>Dept_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dept. Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Returns</relationshipName>
    <type>Lookup</type>
</CustomField>