force-app/main/default/objects/Return__c/fields/Driver_Code__c.field-meta.xml
<CustomField>
    <fullName>Driver_Code__c</fullName>
    <formula>Daily_log__r.Employee__r.Employee_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver Code</label>
    <type>Text</type>
</CustomField>