force-app/main/default/objects/Return__c/fields/E_invoice_Generate_Date__c.field-meta.xml
<CustomField>
    <fullName>E_invoice_Generate_Date__c</fullName>
    <label>E invoice Generated/Cancelled Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>