force-app/main/default/objects/Return__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <label>Grand Total</label>
    <summarizedField>Return_Item__c.Total__c</summarizedField>
    <summaryForeignKey>Return_Item__c.Return__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>