force-app/main/default/objects/Return__c/fields/GSTzen_uuid__c.field-meta.xml
<CustomField>
    <fullName>GSTzen_uuid__c</fullName>
    <label>GSTzen uuid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>