force-app/main/default/objects/Return__c/fields/Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Id__c</fullName>
    <formula>Sales_Invoice__r.Invoice_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Id</label>
    <type>Text</type>
</CustomField>