force-app/main/default/objects/Return__c/fields/IRN_Number__c.field-meta.xml
<CustomField>
    <fullName>IRN_Number__c</fullName>
    <label>IRN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>