force-app/main/default/objects/Return__c/fields/IRN_Status__c.field-meta.xml
<CustomField>
    <fullName>IRN_Status__c</fullName>
    <label>IRN Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>