force-app/main/default/objects/Return__c/fields/New_Flow__c.field-meta.xml
<CustomField>
    <fullName>New_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Flow</label>
    <type>Checkbox</type>
</CustomField>