force-app/main/default/objects/Return__c/fields/Return_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Return_Full_Name__c</fullName>
    <label>Return Full Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>