force-app/main/default/objects/Return__c/fields/Return_Id__c.field-meta.xml
<CustomField>
    <fullName>Return_Id__c</fullName>
    <displayFormat>RET-{0000}</displayFormat>
    <label>Return Id</label>
    <type>AutoNumber</type>
</CustomField>