force-app/main/default/objects/Return__c/fields/Return_Total__c.field-meta.xml
<CustomField>
    <fullName>Return_Total__c</fullName>
    <formula>ROUND(Grand_Total_Discounted__c,0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>