force-app/main/default/objects/Return__c/fields/Return_Type__c.field-meta.xml
<CustomField>
    <fullName>Return_Type__c</fullName>
    <label>Return Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saleable</fullName>
            </value>
            <value>
                <fullName>Non-Saleable</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
                <isActive>false</isActive>
                <label>Damaged</label>
            </value>
            <value>
                <fullName>Expired</fullName>
                <isActive>false</isActive>
                <label>Expired</label>
            </value>
            <value>
                <fullName>Manufacturing Defect</fullName>
                <isActive>false</isActive>
                <label>Manufacturing Defect</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>