force-app/main/default/objects/Return__c/fields/Round_off__c.field-meta.xml
<CustomField>
    <fullName>Round_off__c</fullName>
    <formula>Return_Total__c  - Grand_Total_Discounted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round-off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>