force-app/main/default/objects/Return__c/fields/Sales_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Invoice</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sales_Invoice__c.Sales_Invoice_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Invoice__c</referenceTo>
    <relationshipLabel>Returns</relationshipLabel>
    <relationshipName>Returns</relationshipName>
    <type>Lookup</type>
</CustomField>