force-app/main/default/objects/Return__c/fields/SignedQrCodeImgUrl__c.field-meta.xml
<CustomField>
    <fullName>SignedQrCodeImgUrl__c</fullName>
    <label>SignedQrCodeImgUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>