force-app/main/default/objects/Return__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Against Invoice</fullName>
            </value>
            <value>
                <fullName>Against Customer</fullName>
            </value>
            <value>
                <fullName>On Account</fullName>
                <isActive>false</isActive>
                <label>On Account</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>