force-app/main/default/objects/Return__c/validationRules/Deduct_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Deduct_amount</fullName>
    <active>true</active>
    <errorConditionFormula>if(AND(text(Type__c) ==&apos;Against Customer&apos;, Grand_Total__c &lt; Credit_value__c ),TRUE,FALSE)</errorConditionFormula>
    <errorMessage>The return amount has already been deducted from the invoice.</errorMessage>
</ValidationRule>