force-app/main/default/objects/Return__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Customer__c</columns>
    <columns>Sales_Invoice__c</columns>
    <columns>Grand_Total_Discounted__c</columns>
    <columns>Grand_Total__c</columns>
    <columns>Return_Date__c</columns>
    <columns>Return_Type__c</columns>
    <columns>Route__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>New_Flow__c</columns>
    <columns>Send_to_GSTZen__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>