force-app/main/default/objects/Return__c/listViews/TODAY.listView-meta.xml
<ListView>
    <fullName>TODAY</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Sales_Invoice__c</columns>
    <columns>Grand_Total__c</columns>
    <columns>Return_Date__c</columns>
    <columns>Return_Type__c</columns>
    <columns>Route__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>TODAY</label>
</ListView>